created form for adding groceries

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <script type="text/javascript">
+<form id = "addGrocerForm" method = "post">
+    <input id="groceryinput" type="text" placeholder="new grocery">
+    <button type="submit">ADD</button>
+</form>
+
+<script type="text/javascript">
   
 </script>
+
 </body>
 </html>
