add grocery to array on form submit

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-<form id = "addGrocerForm" method = "post">
+<form id = "addGroceryForm" method = "post">
     <input id="groceryinput" type="text" placeholder="new grocery">
     <button type="submit">ADD</button>
 </form>
 
 <script type="text/javascript">
-  
+  var groceries
 </script>
 
 </body>
